-- Rework update method for better usability -- Update documentation.yaml -- Implement 3way merge into update request -- Rework some other stuff like Locker for locking data in database for one transaction -- Remove some handlers for better readability
